Add cart-pole (#26) and three-species food chain (#27), expand analogies to 53
Cart-pole: Lagrangian mechanics, mass matrix inversion, RK4 integration.
omega = sqrt(g*(M+m)/(M*L)) for small-angle hanging equilibrium.
20 tests covering energy conservation, frequency, pendulum dynamics.

Three-species: 3-level trophic cascade (grass-herbivore-predator).
Extends Lotka-Volterra to 3 coupled nonlinear ODEs with invasion rate.
20 tests covering equilibrium, special cases, rediscovery data.

Cross-domain: 27 domains, 53 analogies (27 structural + 10 dimensional
+ 16 topological). New connections: cart-pole<->double_pendulum,
cart-pole<->harmonic_oscillator, three-species<->LV, three-species<->SIR.

--- a/paper/results_table.tex
+++ b/paper/results_table.tex
@@ -37,6 +37,8 @@
 23 & Diffusive LV & RD-PDE & -- & -- & Fisher-KPP waves \\
 24 & Damped Wave & Wave PDE & -- & -- & $\omega_k = ck$ dispersion \\
 25 & 2D Ising & Stat.\ Mech. & -- & -- & $T_c = 2J/\ln(1{+}\sqrt{2})$ \\
+26 & Cart-Pole & Nonlinear ODE & -- & -- & $\omega = \sqrt{g(M{+}m)/(ML)}$ \\
+27 & 3-Species & Nonlinear ODE & -- & -- & Trophic cascade ODE \\
 \bottomrule
 \end{tabular}
 \end{table*}
