Update docs for 31 domains, 857 tests, 66 analogies
Add elastic pendulum, Rossler, Brusselator-diffusion, Henon map
to all listings. 21 math classes. Paper updated throughout.

--- a/paper/results_table.tex
+++ b/paper/results_table.tex
@@ -39,6 +39,10 @@
 25 & 2D Ising & Stat.\ Mech. & -- & -- & $T_c = 2J/\ln(1{+}\sqrt{2})$ \\
 26 & Cart-Pole & Nonlinear ODE & -- & -- & $\omega = \sqrt{g(M{+}m)/(ML)}$ \\
 27 & 3-Species & Nonlinear ODE & -- & -- & Trophic cascade ODE \\
+28 & Elastic Pend. & Nonlinear ODE & -- & -- & $\omega_r = \sqrt{k/m}$ \\
+29 & R\"ossler & Chaotic ODE & -- & -- & Period-doubling chaos \\
+30 & Bruss.-Diff. & RD-PDE & -- & -- & Turing instability \\
+31 & H\'enon Map & Discrete & -- & -- & Attractor $D \approx 1.26$ \\
 \bottomrule
 \end{tabular}
 \end{table*}
