--- a/paper/results_table.tex
+++ b/paper/results_table.tex
@@ -43,6 +43,10 @@
 29 & R\"ossler & Chaotic ODE & -- & -- & Period-doubling chaos \\
 30 & Bruss.-Diff. & RD-PDE & -- & -- & Turing instability \\
 31 & H\'enon Map & Discrete & -- & -- & Attractor $D \approx 1.26$ \\
+32 & Rosenzweig-MA & Nonlinear ODE & -- & -- & Holling Type II \\
+33 & Chua Circuit & Chaotic ODE & -- & -- & Double-scroll attractor \\
+34 & Shallow Water & PDE & -- & -- & $c = \sqrt{gh}$ \\
+35 & Toda Lattice & Integrable & -- & -- & Soliton propagation \\
 \bottomrule
 \end{tabular}
 \end{table*}
