Add KS (#36), Ginzburg-Landau (#37), Oregonator (#38), Bak-Sneppen (#39)
Four new domains with full test coverage:
- Kuramoto-Sivashinsky: spatiotemporal chaos PDE, ETDRK4 spectral (25 tests)
- Complex Ginzburg-Landau: amplitude equation, Benjamin-Feir instability (21 tests)
- Oregonator: BZ chemical oscillator, relaxation oscillations (19 tests)
- Bak-Sneppen: self-organized criticality, f_c ~ 2/3 (23 tests)

Cross-domain analogies expanded to 88 across 39 domains.
1049 tests passing, 65 skipped.

--- a/paper/results_table.tex
+++ b/paper/results_table.tex
@@ -47,6 +47,10 @@
 33 & Chua Circuit & Chaotic ODE & -- & -- & Double-scroll attractor \\
 34 & Shallow Water & PDE & -- & -- & $c = \sqrt{gh}$ \\
 35 & Toda Lattice & Integrable & -- & -- & Soliton propagation \\
+36 & Kuramoto-Siv. & Chaotic PDE & -- & -- & Spatiotemporal chaos \\
+37 & Ginzburg-Landau & Complex PDE & -- & -- & Benjamin-Feir instab. \\
+38 & Oregonator & Nonlinear ODE & -- & -- & BZ relaxation osc. \\
+39 & Bak-Sneppen & SOC & -- & -- & $f_c \approx 2/3$ \\
 \bottomrule
 \end{tabular}
 \end{table*}
