Update docs for 43 domains, 1142 tests, 98 analogies
Add Lorenz-96 (#40), Chemostat (#41), FHN Spatial (#42),
Wilberforce (#43) to README domain listings, paper conclusion,
and results table. Update badges and counts throughout.

--- a/paper/results_table.tex
+++ b/paper/results_table.tex
@@ -51,6 +51,10 @@
 37 & Ginzburg-Landau & Complex PDE & -- & -- & Benjamin-Feir instab. \\
 38 & Oregonator & Nonlinear ODE & -- & -- & BZ relaxation osc. \\
 39 & Bak-Sneppen & SOC & -- & -- & $f_c \approx 2/3$ \\
+40 & Lorenz-96 & High-dim.\ Chaos & -- & -- & Lyapunov $\lambda > 0$ at $F{=}8$ \\
+41 & Chemostat & Nonlinear ODE & -- & -- & Washout $D_c = \mu_{\max} S_0/(K_s{+}S_0)$ \\
+42 & FHN Spatial & RD-PDE & -- & -- & Spiral wave patterns \\
+43 & Wilberforce & Coupled ODE & -- & -- & Beat frequency $\omega_b$ \\
 \bottomrule
 \end{tabular}
 \end{table*}
