Update docs for 47 domains, 1242 tests, 111 analogies
Add Standard Map (#44), Hodgkin-Huxley (#45), Rayleigh-Benard (#46),
Eco-Epidemic (#47) to README domain listings, paper conclusion,
and results table. Update badges and counts throughout.

--- a/paper/results_table.tex
+++ b/paper/results_table.tex
@@ -55,6 +55,10 @@
 41 & Chemostat & Nonlinear ODE & -- & -- & Washout $D_c = \mu_{\max} S_0/(K_s{+}S_0)$ \\
 42 & FHN Spatial & RD-PDE & -- & -- & Spiral wave patterns \\
 43 & Wilberforce & Coupled ODE & -- & -- & Beat frequency $\omega_b$ \\
+44 & Standard Map & Hamiltonian & -- & -- & $K_c \approx 0.9716$ (KAM) \\
+45 & Hodgkin-Huxley & Biophysical ODE & -- & -- & f-I curve, action pot. \\
+46 & Rayleigh-B\'enard & Convection PDE & -- & -- & $\text{Ra}_c \approx 657.5$ \\
+47 & Eco-Epidemic & Eco-Epidemiol. & -- & -- & Predator disease ctrl \\
 \bottomrule
 \end{tabular}
 \end{table*}
