Update docs for 51 domains, 1338 tests, 119 analogies
Add Hindmarsh-Rose (#48), Magnetic Pendulum (#49), Competitive LV (#50),
Vicsek (#51) to README, paper, and results table. Update all counts.

--- a/paper/results_table.tex
+++ b/paper/results_table.tex
@@ -59,6 +59,10 @@
 45 & Hodgkin-Huxley & Biophysical ODE & -- & -- & f-I curve, action pot. \\
 46 & Rayleigh-B\'enard & Convection PDE & -- & -- & $\text{Ra}_c \approx 657.5$ \\
 47 & Eco-Epidemic & Eco-Epidemiol. & -- & -- & Predator disease ctrl \\
+48 & Hindmarsh-Rose & Bursting ODE & -- & -- & Burst dynamics \\
+49 & Magnetic Pend. & Fractal Basin & -- & -- & Fractal basin boundaries \\
+50 & Competitive LV & Competitive ODE & -- & -- & Exclusion principle \\
+51 & Vicsek & Active Matter & -- & -- & Flocking transition \\
 \bottomrule
 \end{tabular}
 \end{table*}
