Update docs for 55 domains, 1433 tests, 129 analogies
Add Coupled Lorenz (#52), BZ Spiral (#53), Swinging Atwood (#54),
Allee Pred-Prey (#55) to README, paper, and results table.

--- a/paper/results_table.tex
+++ b/paper/results_table.tex
@@ -63,6 +63,10 @@
 49 & Magnetic Pend. & Fractal Basin & -- & -- & Fractal basin boundaries \\
 50 & Competitive LV & Competitive ODE & -- & -- & Exclusion principle \\
 51 & Vicsek & Active Matter & -- & -- & Flocking transition \\
+52 & Coupled Lorenz & Sync.\ Chaos & -- & -- & $\varepsilon_c$ sync threshold \\
+53 & BZ Spiral & Excitable PDE & -- & -- & Spiral waves \\
+54 & Swing.\ Atwood & Lagrangian ODE & -- & -- & $E$ conservation \\
+55 & Allee Pred-Prey & Bistable ODE & -- & -- & Allee threshold $A$ \\
 \bottomrule
 \end{tabular}
 \end{table*}
