--- a/paper/results_table.tex
+++ b/paper/results_table.tex
@@ -67,6 +67,10 @@
 53 & BZ Spiral & Excitable PDE & -- & -- & Spiral waves \\
 54 & Swing.\ Atwood & Lagrangian ODE & -- & -- & $E$ conservation \\
 55 & Allee Pred-Prey & Bistable ODE & -- & -- & Allee threshold $A$ \\
+56 & Mackey-Glass & DDE Chaos & -- & -- & Period-doubling cascade \\
+57 & Bouncing Ball & Impact Map & -- & -- & Feigenbaum universality \\
+58 & Wilson-Cowan & Neural Pop.\ ODE & -- & -- & E-I Hopf bifurcation \\
+59 & Cable Equation & Linear PDE & -- & -- & $V \sim e^{-|x|/\lambda}$ \\
 \bottomrule
 \end{tabular}
 \end{table*}
