Update docs for 63 domains, 1766 tests, 152 analogies

--- a/paper/results_table.tex
+++ b/paper/results_table.tex
@@ -71,6 +71,10 @@
 57 & Bouncing Ball & Impact Map & -- & -- & Feigenbaum universality \\
 58 & Wilson-Cowan & Neural Pop.\ ODE & -- & -- & E-I Hopf bifurcation \\
 59 & Cable Equation & Linear PDE & -- & -- & $V \sim e^{-|x|/\lambda}$ \\
+60 & Sine-Gordon & Nonlinear Wave & -- & -- & Kink soliton $Q=1$ \\
+61 & Thomas & Cyclic Chaos & -- & -- & $b_c \approx 0.208$ \\
+62 & Ikeda Map & Discrete Chaos & -- & -- & $\det(J) = u^2$ \\
+63 & May-Leonard & Cyclic Comp. & -- & -- & Heteroclinic cycles \\
 \bottomrule
 \end{tabular}
 \end{table*}
