--- a/paper/results_table.tex
+++ b/paper/results_table.tex
@@ -75,6 +75,10 @@
 61 & Thomas & Cyclic Chaos & -- & -- & $b_c \approx 0.208$ \\
 62 & Ikeda Map & Discrete Chaos & -- & -- & $\det(J) = u^2$ \\
 63 & May-Leonard & Cyclic Comp. & -- & -- & Heteroclinic cycles \\
+64 & Cahn-Hilliard & Phase Field PDE & -- & -- & $L(t) \sim t^{1/3}$ \\
+65 & Delayed Pred-Prey & DDE & -- & -- & Hopf at $\tau_c$ \\
+66 & Duffing-VdP & Nonlinear ODE & -- & -- & VdP$+$Duffing hybrid \\
+67 & Network SIS & Network Epi. & -- & -- & $\beta_c = \gamma/\lambda_{\max}$ \\
 \bottomrule
 \end{tabular}
 \end{table*}
