Update docs for 71 domains, 1985 tests, 175 analogies

--- a/paper/results_table.tex
+++ b/paper/results_table.tex
@@ -79,6 +79,10 @@
 65 & Delayed Pred-Prey & DDE & -- & -- & Hopf at $\tau_c$ \\
 66 & Duffing-VdP & Nonlinear ODE & -- & -- & VdP$+$Duffing hybrid \\
 67 & Network SIS & Network Epi. & -- & -- & $\beta_c = \gamma/\lambda_{\max}$ \\
+68 & Coupled Map Lattice & Spatiotemporal & -- & -- & Kaneko CML chaos \\
+69 & Schnakenberg & RD-PDE & -- & -- & Turing pattern formation \\
+70 & Kapitza Pend. & Parametric ODE & -- & -- & Inverted stabilization \\
+71 & FitzHugh-Rinzel & Bursting ODE & -- & -- & 3-timescale bursting \\
 \bottomrule
 \end{tabular}
 \end{table*}
