Update docs for 75 domains, 2131 tests, 187 analogies

--- a/paper/results_table.tex
+++ b/paper/results_table.tex
@@ -83,6 +83,10 @@
 69 & Schnakenberg & RD-PDE & -- & -- & Turing pattern formation \\
 70 & Kapitza Pend. & Parametric ODE & -- & -- & Inverted stabilization \\
 71 & FitzHugh-Rinzel & Bursting ODE & -- & -- & 3-timescale bursting \\
+72 & Lorenz-84 & Low-dim.\ Atmos. & -- & -- & Hadley $x^*{=}F$ \\
+73 & Rabinovich-Fab. & Plasma Chaos & -- & -- & Multiscroll attractor \\
+74 & Sprott Systems & Minimal Chaos & -- & -- & Parameterless chaos \\
+75 & Gray-Scott 1D & 1D RD-PDE & -- & -- & Pulse splitting \\
 \bottomrule
 \end{tabular}
 \end{table*}
