Update docs for 79 domains, 2260 tests, 199 analogies

--- a/paper/results_table.tex
+++ b/paper/results_table.tex
@@ -87,6 +87,10 @@
 73 & Rabinovich-Fab. & Plasma Chaos & -- & -- & Multiscroll attractor \\
 74 & Sprott Systems & Minimal Chaos & -- & -- & Parameterless chaos \\
 75 & Gray-Scott 1D & 1D RD-PDE & -- & -- & Pulse splitting \\
+76 & Pred-Prey-Mut. & Mutualistic ODE & -- & -- & Holling II + mutualism \\
+77 & Brusselator 2D & 2D RD-PDE & -- & -- & Hex spots/stripes \\
+78 & FPUT Lattice & Integrable Lattice & -- & -- & Recurrence paradox \\
+79 & Selkov & Biochemical ODE & -- & -- & Glycolysis Hopf \\
 \bottomrule
 \end{tabular}
 \end{table*}
