--- a/paper/results_table.tex
+++ b/paper/results_table.tex
@@ -91,6 +91,10 @@
 77 & Brusselator 2D & 2D RD-PDE & -- & -- & Hex spots/stripes \\
 78 & FPUT Lattice & Integrable Lattice & -- & -- & Recurrence paradox \\
 79 & Selkov & Biochemical ODE & -- & -- & Glycolysis Hopf \\
+80 & Rikitake & Geophysical ODE & -- & -- & Polarity reversals \\
+81 & Oregonator 1D & 1D Excitable PDE & -- & -- & Traveling chem.\ pulses \\
+82 & Ricker Map & Discrete Pop. & -- & -- & Overcompensation chaos \\
+83 & Morris-Lecar & Conductance Neuron & -- & -- & Type I/II excitability \\
 \bottomrule
 \end{tabular}
 \end{table*}
