Update docs for 87 domains, 2525 tests, 221 analogies

--- a/paper/results_table.tex
+++ b/paper/results_table.tex
@@ -95,6 +95,10 @@
 81 & Oregonator 1D & 1D Excitable PDE & -- & -- & Traveling chem.\ pulses \\
 82 & Ricker Map & Discrete Pop. & -- & -- & Overcompensation chaos \\
 83 & Morris-Lecar & Conductance Neuron & -- & -- & Type I/II excitability \\
+84 & Colpitts Osc. & Electronic Chaos & -- & -- & Jerk-circuit chaos \\
+85 & R\"ossler Hyper. & Hyperchaotic ODE & -- & -- & Two positive LE \\
+86 & Harvested Pop. & Resource ODE & -- & -- & MSY saddle-node \\
+87 & FHN Ring & Neural Network & -- & -- & Ring traveling waves \\
 \bottomrule
 \end{tabular}
 \end{table*}
