Update docs for 91 domains, 2651 tests, 234 analogies

--- a/paper/results_table.tex
+++ b/paper/results_table.tex
@@ -99,6 +99,10 @@
 85 & R\"ossler Hyper. & Hyperchaotic ODE & -- & -- & Two positive LE \\
 86 & Harvested Pop. & Resource ODE & -- & -- & MSY saddle-node \\
 87 & FHN Ring & Neural Network & -- & -- & Ring traveling waves \\
+88 & Bazykin & Pred-Prey ODE & -- & -- & Holling II + quad. mort. \\
+89 & SIR-Vaccination & Epidemic ODE & -- & -- & Herd immunity $\nu_c$ \\
+90 & Langford & Torus ODE & -- & -- & Hopf-Hopf bifurcation \\
+91 & Laser Rate & Laser Physics & -- & -- & $P_{th}$ threshold lasing \\
 \bottomrule
 \end{tabular}
 \end{table*}
