--- a/paper/results_table.tex
+++ b/paper/results_table.tex
@@ -103,6 +103,10 @@
 89 & SIR-Vaccination & Epidemic ODE & -- & -- & Herd immunity $\nu_c$ \\
 90 & Langford & Torus ODE & -- & -- & Hopf-Hopf bifurcation \\
 91 & Laser Rate & Laser Physics & -- & -- & $P_{th}$ threshold lasing \\
+92 & FHN Lattice & Neural Lattice & -- & -- & Spiral waves, sync \\
+93 & Four-Species LV & Food Web ODE & -- & -- & 4-species coexistence \\
+94 & Lorenz-Stenflo & 4D Chaotic ODE & -- & -- & EM wave coupling \\
+95 & Chen & Chaotic ODE & -- & -- & Lorenz algebraic dual \\
 \bottomrule
 \end{tabular}
 \end{table*}
