Update docs for 99 domains, 2931 tests, 261 analogies

--- a/paper/results_table.tex
+++ b/paper/results_table.tex
@@ -107,6 +107,10 @@
 93 & Four-Species LV & Food Web ODE & -- & -- & 4-species coexistence \\
 94 & Lorenz-Stenflo & 4D Chaotic ODE & -- & -- & EM wave coupling \\
 95 & Chen & Chaotic ODE & -- & -- & Lorenz algebraic dual \\
+96 & Aizawa & Chaotic ODE & -- & -- & Mushroom attractor \\
+97 & Halvorsen & Chaotic ODE & -- & -- & Cyclic S3 symmetry \\
+98 & Burke-Shaw & Chaotic ODE & -- & -- & Magnetic double-scroll \\
+99 & Nose-Hoover & Thermostat ODE & -- & -- & Thermostatted SHO chaos \\
 \bottomrule
 \end{tabular}
 \end{table*}
