Update docs for 103 domains, 3079 tests, 274 analogies

--- a/paper/results_table.tex
+++ b/paper/results_table.tex
@@ -111,6 +111,10 @@
 97 & Halvorsen & Chaotic ODE & -- & -- & Cyclic S3 symmetry \\
 98 & Burke-Shaw & Chaotic ODE & -- & -- & Magnetic double-scroll \\
 99 & Nose-Hoover & Thermostat ODE & -- & -- & Thermostatted SHO chaos \\
+100 & Lorenz-Haken & Laser ODE & -- & -- & Maxwell-Bloch laser chaos \\
+101 & Sakarya & Chaotic ODE & -- & -- & Neural-inspired chaos \\
+102 & Dadras & Chaotic ODE & -- & -- & 5-param quadratic chaos \\
+103 & Genesio-Tesi & Jerk ODE & -- & -- & Minimal jerk chaos \\
 \bottomrule
 \end{tabular}
 \end{table*}
