Update docs for 107 domains, 3241 tests, 287 analogies

--- a/paper/results_table.tex
+++ b/paper/results_table.tex
@@ -115,6 +115,10 @@
 101 & Sakarya & Chaotic ODE & -- & -- & Neural-inspired chaos \\
 102 & Dadras & Chaotic ODE & -- & -- & 5-param quadratic chaos \\
 103 & Genesio-Tesi & Jerk ODE & -- & -- & Minimal jerk chaos \\
+104 & Lu-Chen & Chaotic ODE & -- & -- & Unified Lorenz-Chen family \\
+105 & Qi & 4D Chaotic ODE & -- & -- & 4D hyperchaos, 2 pos. Lyapunov \\
+106 & WINDMI & Space Weather ODE & -- & -- & Magnetospheric jerk, $e^x$ \\
+107 & Finance & Economics ODE & -- & -- & Chaotic interest-investment-price \\
 \bottomrule
 \end{tabular}
 \end{table*}
