Update docs for 111 domains, 3403 tests, 300 analogies

--- a/paper/results_table.tex
+++ b/paper/results_table.tex
@@ -119,6 +119,10 @@
 105 & Qi & 4D Chaotic ODE & -- & -- & 4D hyperchaos, 2 pos. Lyapunov \\
 106 & WINDMI & Space Weather ODE & -- & -- & Magnetospheric jerk, $e^x$ \\
 107 & Finance & Economics ODE & -- & -- & Chaotic interest-investment-price \\
+108 & Shimizu-Morioka & Chaotic ODE & -- & -- & Lorenz-like simplified convection \\
+109 & Newton-Leipnik & Chaotic ODE & -- & -- & Multistable coexisting attractors \\
+110 & Wang & Chaotic ODE & -- & -- & Single-wing 4-param attractor \\
+111 & Arneodo & Jerk ODE & -- & -- & Cubic $x^3$ jerk chaos \\
 \bottomrule
 \end{tabular}
 \end{table*}
