Update docs for 115 domains, 3553 tests, 312 analogies

--- a/paper/results_table.tex
+++ b/paper/results_table.tex
@@ -123,6 +123,10 @@
 109 & Newton-Leipnik & Chaotic ODE & -- & -- & Multistable coexisting attractors \\
 110 & Wang & Chaotic ODE & -- & -- & Single-wing 4-param attractor \\
 111 & Arneodo & Jerk ODE & -- & -- & Cubic $x^3$ jerk chaos \\
+112 & Rucklidge & Convection ODE & -- & -- & Double convection chaos \\
+113 & Liu & Chaotic ODE & -- & -- & 6-parameter quadratic attractor \\
+114 & Hadley & Atmospheric ODE & -- & -- & Hadley cell circulation \\
+115 & Vallis & Climate ODE & -- & -- & ENSO El Ni\~{n}o chaos \\
 \bottomrule
 \end{tabular}
 \end{table*}
