Update docs for 119 domains, 3699 tests, 325 analogies

--- a/paper/results_table.tex
+++ b/paper/results_table.tex
@@ -127,6 +127,10 @@
 113 & Liu & Chaotic ODE & -- & -- & 6-parameter quadratic attractor \\
 114 & Hadley & Atmospheric ODE & -- & -- & Hadley cell circulation \\
 115 & Vallis & Climate ODE & -- & -- & ENSO El Ni\~{n}o chaos \\
+116 & Tigan & Chaotic ODE & -- & -- & Generalized Lorenz T-system \\
+117 & Predator-Two-Prey & Pred-Prey ODE & -- & -- & 1 predator + 2 prey ecology \\
+118 & Autocatalator & Autocatalytic ODE & -- & -- & $A + 2B \to 3B$ oscillator \\
+119 & SEIR & Epidemic ODE & -- & -- & SIR with latent/exposed period \\
 \bottomrule
 \end{tabular}
 \end{table*}
