--- a/paper/results_table.tex
+++ b/paper/results_table.tex
@@ -131,6 +131,10 @@
 117 & Predator-Two-Prey & Pred-Prey ODE & -- & -- & 1 predator + 2 prey ecology \\
 118 & Autocatalator & Autocatalytic ODE & -- & -- & $A + 2B \to 3B$ oscillator \\
 119 & SEIR & Epidemic ODE & -- & -- & SIR with latent/exposed period \\
+120 & Ueda & Forced ODE & -- & -- & Forced cubic strange attractor \\
+121 & Cubic Map & Discrete Map & -- & -- & $x_{n+1} = rx_n - x_n^3$ chaos \\
+122 & Zombie-SIR & Epidemic ODE & -- & -- & Zombie outbreak + resurrection \\
+123 & Elastic Collision & Particle Mechanics & -- & -- & Newton's cradle, $p$ \& $E$ conservation \\
 \bottomrule
 \end{tabular}
 \end{table*}
